--- a/src/main/resources/assets/trtr/lang/zh_cn.json
+++ b/src/main/resources/assets/trtr/lang/zh_cn.json
@@ -1,9 +1,17 @@
 {
     "item.trtr.battery": "电池",
     "item.trtr.hand_hold_thermometer": "手持温度计",
+    "item.trtr.iron_hammer": "铁锤",
+    "item.trtr.stone_hammer": "石锤",
+    "item.trtr.wooden_hammer": "木锤",
+
     "block.trtr.photovoltaic_panels": "光伏发电板",
     "block.trtr.burner": "燃烧炉",
     "block.trtr.bauxite": "铝土矿",
     "block.trtr.deepslate_bauxite": "深层铝土矿",
-    "death.attack.trtr.burner.hot": "%s 试图站在极高温的燃烧炉上"
+    "block.trtr.alunite": "明矾石",
+
+    "death.attack.trtr.burner.hot": "%s 试图站在极高温的燃烧炉上",
+
+    "attribute.name.trtr.thump_efficiency": "捶打效率"
 }
