--- a/src/main/resources/assets/trtr/lang/en_us.json
+++ b/src/main/resources/assets/trtr/lang/en_us.json
@@ -9,18 +9,32 @@
     "item.trtr.galena_powder": "Galena powder",
     "item.trtr.hematite_powder": "Hematite powder",
     "item.trtr.coal_powder": "Coal powder",
+    "item.trtr.chalcopyrite_powder": "Chalcopyrite powder",
+    "item.trtr.cuprite_powder": "Cuprite powder",
+    "item.trtr.malachite_powder": "Malachite powder",
     "item.trtr.deepslate_powder": "Deepslate powder",
     "item.trtr.stone_powder": "Stone powder",
+    "item.trtr.albite_powder": "Albite powder",
+    "item.trtr.orthoclase_powder": "Orthoclase powder",
+    "item.trtr.alunite_powder": "Alunite powder",
     "item.trtr.crushed_bauxite": "Crushed bauxite",
     "item.trtr.crushed_acanthite": "Crushed acanthite",
     "item.trtr.crushed_galena": "Crushed galena",
     "item.trtr.crushed_hematite": "Crushed hematite",
     "item.trtr.crushed_coal": "Crushed coal",
+    "item.trtr.crushed_albite": "Crushed albite",
+    "item.trtr.crushed_orthoclase": "Crushed orthoclase",
+    "item.trtr.crushed_alunite": "Crushed alunite",
     "item.trtr.crushed_deepslate_bauxite": "Crushed deepslate bauxite",
     "item.trtr.crushed_deepslate_acanthite": "Crushed deepslate acanthite",
     "item.trtr.crushed_deepslate_galena": "Crushed deepslate galena",
     "item.trtr.crushed_deepslate_hematite": "Crushed deepslate hematite",
     "item.trtr.crushed_deepslate_coal": "Crushed deepslate coal",
+    "item.trtr.crushed_chalcopyrite": "Crushed deepslate chalcopyrite",
+    "item.trtr.crushed_deepslate_chalcopyrite": "Crushed deepslate chalcopyrite",
+    "item.trtr.crushed_cuprite": "Crushed cuprite",
+    "item.trtr.crushed_deepslate_cuprite": "Crushed deepslate cuprite",
+    "item.trtr.crushed_malachite": "Crushed malachite",
     "item.trtr.crushed_deepslate": "Crushed deepslate",
     "item.trtr.crushed_stone": "Crushed stone",
     "item.trtr.plant_fiber": "Plant fiber",
@@ -36,6 +50,11 @@
     "block.trtr.orthoclase": "Orthoclase",
     "block.trtr.acanthite": "Acanthite",
     "block.trtr.deepslate_acanthite": "Deepslate acanthite",
+    "block.trtr.malachite": "Malachite",
+    "block.trtr.chalcopyrite": "Chalcopyrite",
+    "block.trtr.deepslate_chalcopyrite": "Deepslate chalcopyrite",
+    "block.trtr.cuprite": "Cuprite",
+    "block.trtr.deepslate_cuprite": "Deepslate cuprite",
 
     "death.attack.trtr.burner.hot": "%s try stand on high temperature burner",
 
