--- a/src/main/resources/assets/trtr/lang/zh_cn.json
+++ b/src/main/resources/assets/trtr/lang/zh_cn.json
@@ -9,18 +9,32 @@
     "item.trtr.galena_powder": "方铅矿粉",
     "item.trtr.hematite_powder": "赤铁矿粉",
     "item.trtr.coal_powder": "煤矿粉",
+    "item.trtr.chalcopyrite_powder": "黄铜矿粉",
+    "item.trtr.cuprite_powder": "赤铜矿粉",
+    "item.trtr.malachite_powder": "孔雀石粉",
     "item.trtr.deepslate_powder": "深板岩粉",
     "item.trtr.stone_powder": "石粉",
-    "item.trtr.crushed_bauxite": "碎铝土矿",
-    "item.trtr.crushed_acanthite": "碎螺状硫银矿",
-    "item.trtr.crushed_galena": "碎方铅矿",
-    "item.trtr.crushed_hematite": "碎赤铁矿",
-    "item.trtr.crushed_coal": "碎煤矿",
-    "item.trtr.crushed_deepslate_bauxite": "碎深层铝土矿",
-    "item.trtr.crushed_deepslate_acanthite": "碎深层螺状硫银矿",
-    "item.trtr.crushed_deepslate_galena": "碎深层方铅矿",
-    "item.trtr.crushed_deepslate_hematite": "碎深层赤铁矿",
-    "item.trtr.crushed_deepslate_coal": "碎深层煤矿",
+    "item.trtr.albite_powder": "明矾石粉",
+    "item.trtr.orthoclase_powder": "钾长石粉",
+    "item.trtr.alunite_powder": "钠长石粉",
+    "item.trtr.crushed_bauxite": "碎铝土矿石",
+    "item.trtr.crushed_acanthite": "碎螺状硫银矿石",
+    "item.trtr.crushed_galena": "碎方铅矿石",
+    "item.trtr.crushed_hematite": "碎赤铁矿石",
+    "item.trtr.crushed_coal": "碎煤矿石",
+    "item.trtr.crushed_albite": "碎明矾石",
+    "item.trtr.crushed_orthoclase": "碎钾长石",
+    "item.trtr.crushed_alunite": "碎钠长石",
+    "item.trtr.crushed_deepslate_bauxite": "碎深层铝土矿石",
+    "item.trtr.crushed_deepslate_acanthite": "碎深层螺状硫银矿石",
+    "item.trtr.crushed_deepslate_galena": "碎深层方铅矿石",
+    "item.trtr.crushed_deepslate_hematite": "碎深层赤铁矿石",
+    "item.trtr.crushed_deepslate_coal": "碎深层煤矿石",
+    "item.trtr.crushed_chalcopyrite": "碎黄铜矿石",
+    "item.trtr.crushed_deepslate_chalcopyrite": "碎深层黄铜矿石",
+    "item.trtr.crushed_cuprite": "碎赤铜矿石",
+    "item.trtr.crushed_deepslate_cuprite": "碎深层赤铜矿石",
+    "item.trtr.crushed_malachite": "碎孔雀石",
     "item.trtr.crushed_deepslate": "碎深板岩",
     "item.trtr.crushed_stone": "碎石",
     "item.trtr.plant_fiber": "植物纤维",
@@ -29,13 +43,18 @@
     "block.trtr.burner": "燃烧炉",
     "block.trtr.bauxite": "铝土矿石",
     "block.trtr.deepslate_bauxite": "深层铝土矿石",
-    "block.trtr.alunite": "明矾石",
-    "block.trtr.albite": "钠长石",
     "block.trtr.galena": "方铅矿石",
     "block.trtr.deepslate_galena": "深层方铅矿石",
-    "block.trtr.orthoclase": "钾长石",
     "block.trtr.acanthite": "螺状硫银矿石",
     "block.trtr.deepslate_acanthite": "深层螺状硫银矿石",
+    "block.trtr.chalcopyrite": "黄铜矿石",
+    "block.trtr.deepslate_chalcopyrite": "深层黄铜矿石",
+    "block.trtr.cuprite": "赤铜矿石",
+    "block.trtr.deepslate_cuprite": "深层赤铜矿石",
+    "block.trtr.alunite": "明矾石",
+    "block.trtr.albite": "钠长石",
+    "block.trtr.orthoclase": "钾长石",
+    "block.trtr.malachite": "孔雀石",
 
     "death.attack.trtr.burner.hot": "%s 试图站在极高温的燃烧炉上",
 
