--- a/src/main/resources/assets/trtr/lang/en_us.json
+++ b/src/main/resources/assets/trtr/lang/en_us.json
@@ -18,6 +18,9 @@
     "item.trtr.orthoclase_powder": "Orthoclase powder",
     "item.trtr.alunite_powder": "Alunite powder",
     "item.trtr.anorthite_powder": "Anorthite powder",
+    "item.trtr.pitchblende_powder": "Pitchblende powder",
+    "item.trtr.carnotite_powder": "Carnotite powder",
+    "item.trtr.autunite_powder": "Autunite powder",
     "item.trtr.crushed_bauxite": "Crushed bauxite",
     "item.trtr.crushed_acanthite": "Crushed acanthite",
     "item.trtr.crushed_galena": "Crushed galena",
@@ -37,6 +40,12 @@
     "item.trtr.crushed_deepslate_cuprite": "Crushed deepslate cuprite",
     "item.trtr.crushed_malachite": "Crushed malachite",
     "item.trtr.crushed_anorthite": "Crushed anorthite",
+    "item.trtr.crushed_pitchblende": "Crushed pitchblende",
+    "item.trtr.crushed_deepslate_pitchblende": "Crushed deepslate pitchblende",
+    "item.trtr.crushed_carnotite": "Crushed carnotite",
+    "item.trtr.crushed_deepslate_carnotite": "Crushed deepslate carnotite",
+    "item.trtr.crushed_autunite": "Crushed autunite",
+    "item.trtr.crushed_deepslate_autunite": "Crushed deepslate autunite",
     "item.trtr.crushed_deepslate": "Crushed deepslate",
     "item.trtr.crushed_stone": "Crushed stone",
     "item.trtr.plant_fiber": "Plant fiber",
@@ -58,6 +67,12 @@
     "block.trtr.cuprite": "Cuprite",
     "block.trtr.deepslate_cuprite": "Deepslate cuprite",
     "block.trtr.anorthite": "Anorthite",
+    "block.trtr.pitchblende": "Pitchblende",
+    "block.trtr.deepslate_pitchblende": "Deepslate pitchblende",
+    "block.trtr.carnotite": "Carnotite",
+    "block.trtr.deepslate_carnotite": "Deepslate carnotite",
+    "block.trtr.autunite": "Autunite",
+    "block.trtr.deepslate_autunite": "Deepslate autunite",
 
     "death.attack.trtr.burner.hot": "%s try stand on high temperature burner",
     "death.attack.trtr.nuclear.disease": "%s dead in nuclear disease",
