--- a/src/main/resources/assets/trtr/lang/zh_cn.json
+++ b/src/main/resources/assets/trtr/lang/zh_cn.json
@@ -18,6 +18,9 @@
     "item.trtr.orthoclase_powder": "钾长石粉",
     "item.trtr.alunite_powder": "钠长石粉",
     "item.trtr.anorthite_powder": "碎钙长石粉",
+    "item.trtr.pitchblende_powder": "沥青铀矿粉",
+    "item.trtr.carnotite_powder": "钒酸钾铀矿粉",
+    "item.trtr.autunite_powder": "钙铀云母粉",
     "item.trtr.crushed_bauxite": "碎铝土矿石",
     "item.trtr.crushed_acanthite": "碎螺状硫银矿石",
     "item.trtr.crushed_galena": "碎方铅矿石",
@@ -37,9 +40,16 @@
     "item.trtr.crushed_deepslate_cuprite": "碎深层赤铜矿石",
     "item.trtr.crushed_malachite": "碎孔雀石",
     "item.trtr.crushed_anorthite": "碎钙长石",
+    "item.trtr.crushed_pitchblende": "碎沥青铀矿石",
+    "item.trtr.crushed_deepslate_pitchblende": "碎深层沥青铀矿石",
+    "item.trtr.crushed_carnotite": "碎钒酸钾铀矿石",
+    "item.trtr.crushed_deepslate_carnotite": "碎深层钒酸钾铀矿石",
+    "item.trtr.crushed_autunite": "碎钙铀云母",
+    "item.trtr.crushed_deepslate_autunite": "碎深层钙铀云母",
     "item.trtr.crushed_deepslate": "碎深板岩",
     "item.trtr.crushed_stone": "碎石",
     "item.trtr.plant_fiber": "植物纤维",
+
     "block.trtr.photovoltaic_panels": "光伏发电板",
     "block.trtr.burner": "燃烧炉",
     "block.trtr.bauxite": "铝土矿石",
@@ -57,9 +67,17 @@
     "block.trtr.orthoclase": "钾长石",
     "block.trtr.malachite": "孔雀石",
     "block.trtr.anorthite": "钙长石",
+    "block.trtr.pitchblende": "沥青铀矿石",
+    "block.trtr.deepslate_pitchblende": "深层沥青铀矿石",
+    "block.trtr.carnotite": "钒酸钾铀矿石",
+    "block.trtr.deepslate_carnotite": "深层钒酸钾铀矿石",
+    "block.trtr.autunite": "钙铀云母",
+    "block.trtr.deepslate_autunite": "深层钙铀云母",
+
     "death.attack.trtr.burner.hot": "%s 试图站在极高温的燃烧炉上",
     "death.attack.trtr.nuclear.disease": "核症状",
     "attribute.name.trtr.thump_efficiency": "捶打效率",
+
     "itemGroup.trtr.all": "所有",
     "itemGroup.trtr.ore": "矿石",
     "itemGroup.trtr.crushed_ore": "碎矿",
