--- a/src/main/resources/assets/trtr/lang/zh_cn.json
+++ b/src/main/resources/assets/trtr/lang/zh_cn.json
@@ -75,13 +75,17 @@
     "block.trtr.deepslate_carnotite": "深层钒酸钾铀矿石",
     "block.trtr.autunite": "钙铀云母",
     "block.trtr.deepslate_autunite": "深层钙铀云母",
+    "block.trtr.ilmenite": "钛铁矿石",
+    "block.trtr.deepslate_ilmenite": "深层钛铁矿石",
+    "block.trtr.magnetite": "磁铁矿",
     "block.trtr.niter": "硝石",
     "block.trtr.limestone": "石灰石",
-
+    "block.trtr.rutile": "金红石",
+    "block.trtr.marble": "大理石",
+    "block.trtr.mud_stove": "泥炉",
     "death.attack.trtr.burner.hot": "%s 试图站在极高温的燃烧炉上",
     "death.attack.trtr.nuclear.disease": "核症状",
     "attribute.name.trtr.thump_efficiency": "捶打效率",
-
     "itemGroup.trtr.all": "所有",
     "itemGroup.trtr.ore": "矿石",
     "itemGroup.trtr.crushed_ore": "碎矿",
