Items...advancements...and recipes.

--- a/src/main/resources/assets/trtr/lang/zh_cn.json
+++ b/src/main/resources/assets/trtr/lang/zh_cn.json
@@ -81,5 +81,35 @@
     "block.trtr.rutile": "金红石",
     "block.trtr.marble": "大理石",
     "block.trtr.halite": "石盐矿石",
-    "block.trtr.mud_stove": "泥炉"
+    "block.trtr.mud_stove": "泥炉",
+    "advancements.stone_overture.stone_overture.title": "石之序章",
+    "advancements.stone_overture.stone_overture.description": "序幕，开章",
+    "advancements.stone_overture.stick.title": "木棍！",
+    "advancements.stone_overture.stick.description": "试着用你的双手...",
+    "advancements.stone_overture.be_careful_to_hands.title": "当心伤手",
+    "advancements.stone_overture.be_careful_to_hands.description": "用石头互相打击看看！",
+    "advancements.stone_overture.new_stone_age.title": "新石器时代",
+    "advancements.stone_overture.new_stone_age.description": "组装你的部件",
+    "advancements.stone_overture.break_it.title": "掰断它！",
+    "advancements.stone_overture.break_it.description": "有些时候木棍太长了",
+    "advancements.stone_overture.superior_nature_blade.title": "优秀的自然刀片",
+    "advancements.stone_overture.superior_nature_blade.description": "燧石具有更好的属性，获取难也是值得的！",
+    "advancements.stone_overture.be_careful_to_scratch.title": "当心划手！",
+    "advancements.stone_overture.be_careful_to_scratch.description": "让锋利更进一步",
+    "advancements.stone_overture.broken_miss.title": "碎碎念",
+    "advancements.stone_overture.broken_miss.description": "思而久不得相见",
+    "advancements.stone_overture.broken_love.title": "碎碎恋",
+    "advancements.stone_overture.broken_love.description": "碍于经验",
+    "advancements.stone_overture.a_little_blunt.title": "有点钝？",
+    "advancements.stone_overture.a_little_blunt.description": "奇怪的手感，我建议你去搞些燧石...",
+    "advancements.stone_overture.really_sharp.title": "真锋利",
+    "advancements.stone_overture.really_sharp.description": "初级的采集利器！",
+    "advancements.stone_overture.light_axe.title": "轻盈的斧子",
+    "advancements.stone_overture.light_axe.description": "很好用，但似乎不太结实？",
+    "advancements.stone_overture.hey_ya.title": "嘿呀！",
+    "advancements.stone_overture.hey_ya.description": "原始人必备武器",
+    "advancements.stone_overture.wait_what_is_it_for.title": "等等...它有什么用？",
+    "advancements.stone_overture.wait_what_is_it_for.description": "燧石可能不适合这样做，或许你可以试试去敲石头",
+    "advancements.stone_overture.one_of_plants_marrow.title": "植物的精华之一",
+    "advancements.stone_overture.one_of_plants_marrow.description": "生存必备材料！"
 }
